@@ -9,25 +9,25 @@ public class Main {
         iof.setFilePath(iof.getFilePath("Aufgabe2/files/schwierigkeiten0.txt"));
         iof.readFile();
         // Create the graph and nodes by content from file
-        List fileContent = iof.getContent();
-        graph.BuildGraphByList((ArrayList<String>) fileContent);
+        ArrayList<String> fileContent = iof.getContent();
+        graph.BuildGraphByList(fileContent);
         // Perform topological sorting
         List<Node> nodes = new ArrayList<>(graph.getAllKeys());
         List<Node> topologicalOrder = TopologicalSort.topologicalSort(graph, nodes);
         // sorted without douplicates
         List<Node> sorted = iof.removedDuplicates(topologicalOrder);
 
-        List<Character> wanted = graph.shrinkToOnlyValuesOfInterest(fileContent.get(fileContent.size() - 1).toString());
+        List<Character> wanted = graph.shrinkToOnlyValuesOfInterest(fileContent.getLast());
 
         //get wanted assigmnts
-        List<Character> cleandedSorted = new ArrayList<>();
+        List<Character> cleanSorted = new ArrayList<>();
         // remove unwanted
         for (Node node : sorted) {
             if (wanted.contains(node.getValue())) {
-                cleandedSorted.add(node.getValue());
+                cleanSorted.add(node.getValue());
             }
         }
         System.out.println("Sorted assignments:");
-        System.out.println(cleandedSorted);
+        System.out.println(cleanSorted);
     }
 }
